--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ torch-sparse = "^0.6.15"
 torch-scatter = "^2.0.9"
 biotite = "^0.35.0"
 pydantic = "^1.10.2"
+pandas = "^1.5.1"
+torch-cluster = "^1.6.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
