--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ biotite = "^0.35.0"
 pydantic = "^1.10.2"
 pandas = "^1.5.1"
 torch-cluster = "^1.6.0"
+pyarrow = "^10.0.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
